--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Soportechnics</title>
 </head>
 <body>
     <h1>Página de Inicio</h1>
+    <h2>Soportechnics</h2>
     <p>Prueba para Github Pages</p>
     <p><img src="https://www.cortguitars.com/_DATA/item/1585618451/actionbassplustrnewfull.png" alt=""></p>
 </body>
