--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Página de Inicio</h1>
     <h2>Soportechnics</h2>
     <p>Prueba para Github Pages</p>
+    <p>branch desde macbook pro</p>
     <p><img src="https://www.cortguitars.com/_DATA/item/1585618451/actionbassplustrnewfull.png" alt=""></p>
 </body>
 </html>
