--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Soportechnics</h2>
     <p>Prueba para Github Pages</p>
     <p>branch desde macbook pro</p>
-    <p>otro cambio</p>
+    <p>otro cambio mas</p>
     <p><img src="https://www.cortguitars.com/_DATA/item/1585618451/actionbassplustrnewfull.png" alt=""></p>
 </body>
 </html>
